# docs/docsv1/swagger.json
@@ -133,6 +133,18 @@
                         "description": "Order by field",
                         "name": "order_by",
                         "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page number (for pagination)",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Number of items per page (default 20)",
+                        "name": "page_size",
+                        "in": "query"
                     }
                 ],
                 "responses": {
